# AxoPlotl

./: .gitignore  CMakeLists.txt  README.md
res/: scene.json  scene.sce  testview.json
res/meshes/: HexHexed.ovmb  s10c.ovmb
res/shaders/: cells.frag  cells.glsl  cells.vert  cells_phong.frag  color.vert  color_flat.frag  color_lines_default.geom  color_lines_width.geom  color_phong.frag  color_triangles_default.geom  edges.frag  edges.geom  edges.glsl  edges.vert  faces.frag  faces.geom  faces.glsl  faces.vert  outlines.glsl  phong.frag  picking.glsl  texture_phong.frag  vertices.glsl  vertices.vert
res/shaders/temp/: cells.frag  cells.vert  cells_outline.frag  cells_outline.geom  cells_outline.vert  edges.vert  faces.frag  faces.vert  vertices.frag
res/shaders/texture/: texture.vert  texture_flat.frag
src/: MeshViewer.cpp  MeshViewer.h  README.md  main.cpp  main.h
src/AxoPlotl/: AxoPlotl.cpp  AxoPlotl.h  Runner.cpp  Runner.h  Scene.cpp  Scene.h  main.cpp
src/AxoPlotl/IO/: FileAccessor.cpp  FileAccessor.h  FileUtils.h  JSONFileAccessor.h  MESHFileAccessor.cpp  MESHFileAccessor.h  OBJFileAccessor.cpp  OBJFileAccessor.h  OVMFileAccessor.cpp  OVMFileAccessor.h  PLYFileAccessor.cpp  PLYFileAccessor.h
src/AxoPlotl/algorithms/: marching_cubes.cpp  marching_cubes.h  simplex_noise.cpp  simplex_noise.h
src/AxoPlotl/algorithms/parsing/: reverse_polish.cpp  reverse_polish.h  tokens.cpp  tokens.h
src/AxoPlotl/commons/: Camera.cpp  Camera.h  Color.cpp  Color.h  Mesh.h  PickingTexture.cpp  PickingTexture.h  Shader.h  Texture.cpp  Texture.h  glm.h  ovm.cpp  ovm.h  shader.cpp
src/AxoPlotl/experimental/: BoolQuantity.h  BoolQuantity.ipp  EdgeBoolQuantity.cpp  EdgeBoolQuantity.h  PolyscopeOVMQuantity.cpp  PolyscopeOVMQuantity.h
src/AxoPlotl/geometry/: AABB.h  AABB.hpp  AxPlGeometryObject.cpp  AxPlGeometryObject.h  AxPlInput.cpp  AxPlInput.h  GeometryObject.cpp  GeometryObject.h  Mesh.cpp  Mesh.hpp  Octree.cpp  Octree.h  Surface.cpp  Surface.h  eigen.h  explicit_functions.cpp  explicit_functions.h  glm.h  implicit_functions.cpp  implicit_functions.h  ovm.h  presets.cpp  presets.h
src/AxoPlotl/geometry/nodes/: ConvexPolygonNode.cpp  ConvexPolygonNode.h  ExplicitCurveNode.cpp  ExplicitCurveNode.h  ExplicitSurfaceNode.cpp  ExplicitSurfaceNode.h  GeometryNode.cpp  GeometryNode.h  ImplicitSurfaceNode.cpp  ImplicitSurfaceNode.h  MeshNode.cpp  MeshNode.h  SphericalHarmonicNode.cpp  SphericalHarmonicNode.h  VectorFieldNode.cpp  VectorFieldNode.h
src/AxoPlotl/interface/: imgui_file_dialog.h  polyscope_register_ovm_mesh.cpp  polyscope_register_ovm_mesh.h  request_explicit_function.h
src/AxoPlotl/parsing/: Scope.cpp  Scope.h  parsing.cpp  parsing.h  tokens.cpp  tokens.h  tree.cpp  tree.h  values.h
src/AxoPlotl/polyscope_custom_structures/: ExplicitSurfaceStructure.cpp  ExplicitSurfaceStructure.h  ImplicitSurfaceStructure.cpp  ImplicitSurfaceStructure.h  OVMStructure.cpp  OVMStructure.h  PolyscopeOVM.cpp  PolyscopeOVM.h  TestStructure.cpp  TestStructure.h
src/AxoPlotl/properties/: property_calculations.cpp  property_calculations.hpp  property_data.hpp  property_filters.hpp
src/AxoPlotl/rendering/: GLBuffers.h  ImGuiRenderer.cpp  ImGuiRenderer.h  LinesRenderBatch.cpp  LinesRenderBatch.h  MeshRenderer.cpp  MeshRenderer.h  PickingTexture.cpp  PickingTexture.h  PointsRenderBatch.cpp  PointsRenderBatch.h  Primitives.cpp  Primitives.h  RenderBatch.cpp  RenderBatch.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  TrianglesRenderBatch.cpp  TrianglesRenderBatch.h  VolumeMeshRenderer.cpp  VolumeMeshRenderer.hpp  property_visualization.h  redraw_frames.cpp  redraw_frames.h  shader_source.ipp
src/AxoPlotl/typedefs/: typedefs_OpenVolumeMesh.hpp  typedefs_ToLoG.hpp
src/AxoPlotl/utils/: Color.cpp  Color.h  FileAccessor.cpp  FileAccessor.h  KeyHandler.h  Memory.cpp  Memory.h  MouseHandler.cpp  MouseHandler.h  Time.cpp  Time.h  Typedefs.h  Utils.cpp  Utils.h  simplex_noise.cpp  simplex_noise.h  string_format.hpp
src/commons/: Camera.h  PickingTexture.cpp  PickingTexture.h  Shader.h  camera.cpp  camera.h  shader.cpp  shader.h  texture.cpp  texture.h
src/geometry/: GeometryObject.h
src/glad/include/glad/: glad.h
src/glad/src/: glad.c
src/math/: curves.h
src/primitives/: Sphere.cpp  Triangle.cpp  Triangle.h  cube.cpp  cube.h  sphere.cpp  sphere.h
src/rendering/: GLBuffers.h  HexMeshRenderer.cpp  HexMeshRenderer.h  ImGuiRenderer.cpp  ImGuiRenderer.h  LineBatch.cpp  LineBatch.h  LinesRenderBatch.cpp  LinesRenderBatch.h  MeshRenderer.h  PointsRenderBatch.cpp  PointsRenderBatch.h  PolygonRenderer.cpp  PolygonRenderer.h  RenderBatch.cpp  RenderBatch.h  RenderBatchEdges.cpp  RenderBatchEdges.h  RenderBatchHexCells.cpp  RenderBatchHexCells.h  RenderBatchTetCells.cpp  RenderBatchTetCells.h  RenderBatchTetFaces.cpp  RenderBatchTetFaces.h  RenderBatchVertices.cpp  RenderBatchVertices.h  Renderer.cpp  Renderer.h  TetMeshRenderer.cpp  TetMeshRenderer.h  TriangleBatch.cpp  TriangleBatch.h  TrianglesRenderBatch.cpp  TrianglesRenderBatch.h  VertexAttributesLayout.h
src/utils/: Color.cpp  Color.h  Colors.h  FileAccessor.cpp  FileAccessor.h  Globals.cpp  Globals.h  KeyHandler.h  MouseHandler.cpp  MouseHandler.h  Time.cpp  Time.h  Typedefs.h  Utils.cpp  Utils.h  gl.h
tests/: tests.cpp
